[tool.poetry]
name = "project-alien-invasion"
version = "0.1.0"
description = ""
authors = ["Matheus Batista <mbatista.sarti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.5.2"


[tool.poetry.group.dev.dependencies]
ignr = "^2.2"
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
